# redis-nodes

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
redis_nodes/: __init__.py  __main__.py  logging.yml  master.py  parser.py  topology.py
tests/: test_parser.py  test_topology.py
tests/fixtures/: hosts.csv  nodes.csv
